# BananaTray

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  README_CN.md  build.rs  todo.md
.agent/skills/build-release/: SKILL.md
.agents/skills/issue-status-audit/: SKILL.md
.agents/skills/verify/: SKILL.md
.claude/: settings.json
.github/workflows/: app-ci.yml  ci.yml  release-linux.yml  release-macos.yml  rust.yml
docs/: README.md  antigravity-api.md  architecture.md  code-review-solid-clean.md  custom-provider-plan.md  custom-provider.md  gnome-shell-extension-development.md  gnome-shell-extension-plan.md  gpui-sigbus-bug.md  lessons-gpui-height-calibration.md  logging.md  provider-blueprints.md  providers.md  refresh-strategy.md  review-20260405.md  roadmap-directory-restructure.md  ui_layout_troubleshooting.md  window-not-found-fix.md
docs/app/: analytics.md
docs/archeive/: custom-provider-plan.md  gpui-sigbus-bug.md  lessons-gpui-height-calibration.md  review-20260405.md  review-20260416-followup-issues.md  ui_layout_troubleshooting.md  window-not-found-fix.md
docs/archeive/app/: analytics.md
docs/archive/: code-review-solid-clean.md  lessons-gpui-height-calibration.md  review-20260416-followup-issues.md  roadmap-directory-restructure.md  ui_layout_troubleshooting.md
docs/archive/provider/: provider-refactor-retrospective.md  refactor.md
docs/examples/: custom-provider-cli.yaml  custom-provider-http.yaml  custom-provider-newapi.yaml  kilo.yaml  opencode.yaml  vertex-ai.yaml
docs/provider/: provider-refactor-retrospective.md  refactor.md
examples/: custom-provider-cli.yaml  custom-provider-newapi.yaml
gnome-shell-extension/: README.md  extension.js  i18n.js  metadata.json  panelButton.js  quotaClient.js  quotaPresentation.js  quotaWidgets.js  stylesheet.css
gnome-shell-extension/po/: zh_CN.po
locales/: en.yml  zh-CN.yml
resources/: BananaTray.entitlements  Info.plist  create-dmg-background.sh
resources/linux/: bananatray.desktop  bananatray.service  com.bananatray.Daemon.service  com.bananatray.app.metainfo.xml  com.bananatray.app.metainfo.xml.in
scripts/: bundle-appimage.sh  bundle-deb.sh  bundle-dmg.sh  bundle-rpm.sh  bundle.sh  check-gnome-extension.sh  check-gpui-imports.sh  common.sh  dev-gnome-extension.sh  gnome-extension-mock-daemon.js  install-gnome-extension.sh
src/: app.rs  app_state.rs  app_state_tests.rs  assets.rs  bootstrap.rs  builtin_provider_manifest.rs  i18n.rs  lib.rs  logging.rs  main.rs  models.rs  notification.rs  provider_error_presenter.rs  refresh.rs  settings_store.rs  single_instance.rs  theme.rs  theme_tests.rs  tray_controller.rs  tray_display.rs  tray_icon_helper.rs
src/app/: README.md  app_state.rs  app_view.rs  mod.rs  nav.rs  provider_logic.rs  provider_panel.rs  tray_settings.rs  widgets.rs
src/app/settings_window/: about_tab.rs  components.rs  debug_tab.rs  display_tab.rs  general_tab.rs  mod.rs  provider_detail.rs  provider_sidebar.rs  providers_tab.rs  window_mgr.rs
src/app/widgets/: action_button.rs  cadence_dropdown.rs  card.rs  checkbox.rs  global_actions.rs  icon.rs  icon_row.rs  info_row.rs  mod.rs  quota_bar.rs  segmented_control.rs  simple_input.rs  tab.rs  toggle.rs  tooltip.rs
src/application/: README.md  action.rs  effect.rs  mod.rs  newapi_ops.rs  quota_alert.rs  reducer.rs  reducer_tests.rs  selectors.rs  state.rs  state_tests.rs
src/application/reducer/: README.md  debug.rs  newapi.rs  provider_sidebar.rs  refresh.rs  settings.rs  shared.rs
src/application/reducer_tests/: common.rs  debug.rs  mod.rs  newapi.rs  provider_sidebar.rs  refresh.rs  settings.rs
src/application/selectors/: README.md  dbus_dto.rs  debug.rs  debug_tests.rs  format.rs  issue_report.rs  issue_report_tests.rs  mod.rs  settings.rs  settings_tests.rs  tray.rs  tray_tests.rs
src/dbus/: README.md  iface.rs  mod.rs  serde_types.rs
src/icons/: README.md
src/infra/: logging.rs  mod.rs
src/models/: README.md  layout.rs  mod.rs  newapi.rs  provider.rs  quota.rs  settings.rs  settings_migration.rs  settings_tests.rs  test_helpers.rs
src/models/quota/: README.md  failure.rs  info.rs  label.rs  mod.rs  provider_status.rs  refresh_data.rs  tests.rs  types.rs
src/models/settings/: README.md  migration.rs  mod.rs  provider_config_ordering.rs  provider_config_quota.rs  provider_config_sidebar.rs  tests.rs
src/platform/: README.md  assets.rs  auto_launch.rs  core_graphics.rs  gnome_detect.rs  logging.rs  mod.rs  notification.rs  paths.rs  single_instance.rs  system.rs
src/providers/: README.md  amp.rs  antigravity.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  error_presenter.rs  gemini.rs  kilo.rs  kimi.rs  kiro.rs  manager.rs  minimax.rs  mod.rs  opencode.rs  vertex_ai.rs  windsurf.rs
src/providers/antigravity/: cache_source.rs  live_source.rs  mod.rs  parse_strategy.rs
src/providers/claude/: api_probe.rs  cli_probe.rs  credentials.rs  mod.rs  probe.rs
src/providers/codeium_family/: README.md  cache_source.rs  cache_source_tests.rs  live_source.rs  mod.rs  parse_strategy.rs  spec.rs
src/providers/codex/: README.md  auth.rs  client.rs  config.rs  mod.rs  parser.rs  rpc_probe.rs  status_probe.rs
src/providers/common/: README.md  cli.rs  http_client.rs  jwt.rs  mod.rs  path_resolver.rs  runner.rs
src/providers/copilot/: client.rs  mod.rs  parser.rs  settings_ui.rs  (+1 more)
src/refresh/: README.md  coordinator.rs  coordinator_tests.rs  mod.rs  scheduler.rs  types.rs
src/runtime/: README.md  app_state.rs  diagnostics_context.rs  global_hotkey.rs  mod.rs  newapi_io.rs  settings_window_opener.rs  settings_writer.rs  tests.rs  ui_hooks.rs
src/tray/: README.md  activation.rs  command.rs  controller.rs  display.rs  icon.rs  lifecycle.rs  linux_popup.rs  mod.rs  observers.rs  positioning.rs
src/ui/: README.md  bridge.rs  mod.rs
src/utils/: README.md  http_client.rs  interactive_runner.rs  log_capture.rs  mod.rs  platform.rs  text_utils.rs  time_utils.rs
src/views/: dashboard.rs  mod.rs  provider_card.rs  settings.rs
tests/: state_tests.rs
themes/: dark.yaml  light.yaml
(+89 files in other folders)
