[package]
name = "bananatray"
version = "0.1.0"
edition = "2021"
description = "A cross-platform system tray application for monitoring AI coding assistant quotas"
license = "MIT"

[lib]
name = "bananatray"
path = "src/lib.rs"

[[bin]]
name = "bananatray"
path = "src/main.rs"

[features]
default = ["app"]
app = []

[lints.rust]
# The `objc` crate's macros check for `feature = "cargo-clippy"` which triggers
# unexpected_cfgs warnings. These are harmless and out of our control.
unexpected_cfgs = "allow"

[dependencies]
adabraka-ui = "0.3.9"
anyhow = "1.0"
async-trait = "0.1"
dirs = "5"
interprocess = "2"
fern = "0.7"
log = "0.4"
regex = "1.10"
gpui = { package = "adabraka-gpui", version = "0.5.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
smol = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
base64 = "0.22.1"
ureq = "3"
portable-pty = "0.8"
which = "6"
rust-i18n = "3"
sys-locale = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
prost = "0.13"

# -- macOS native deps --
[target.'cfg(target_os = "macos")'.dependencies]
smappservice-rs = "0.1"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSImage", "NSApplication", "NSButton", "NSView", "NSWindow", "NSControl", "NSStatusBar", "NSRunningApplication", "NSResponder"] }
objc2-user-notifications = "0.3"
block2 = "0.6"

# -- non-macOS notification deps --
# notify-rust MUST be macOS-excluded. Its transitive dependency mac-notification-sys
# contains ObjC code that calls LSCopyApplicationURLsForBundleIdentifier() and
# AppleScript "get id of application" at link time, scanning all registered app
# locations including network volumes. This triggers the macOS TCC dialog:
# "BananaTray wants to access files on a network volume".
# On macOS we use our own native implementation (UNUserNotificationCenter +
# osascript fallback), so notify-rust is unnecessary. See src/notification.rs.
[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = "4"

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
# 修复 Linux 上 XCBConnection::setup() 缺少 Connection trait import 的编译错误
# 上游 bug: adabraka-gpui 0.5.1 src/platform/linux/global_hotkey.rs
adabraka-gpui = { git = "https://github.com/freefcw/adabraka-gpui", rev = "536dbc848498e544d14d7e824f6624c9cf2cd0a4" }
