[package]
name = "bananatray"
version = "0.1.0"
edition = "2021"
description = "A cross-platform system tray application for monitoring AI coding assistant quotas"
license = "MIT"
homepage = "https://github.com/freefcw/BananaTray"
repository = "https://github.com/freefcw/BananaTray"

[lib]
name = "bananatray"
path = "src/lib.rs"

[[bin]]
name = "bananatray"
path = "src/main.rs"
required-features = ["app"]

[features]
# `app` gates the GPUI tray application shell.
# `--no-default-features` is kept only for lib-layer local verification.
default = ["app"]
app = []

[lints.rust]
# The `objc` crate's macros check for `feature = "cargo-clippy"` which triggers
# unexpected_cfgs warnings. These are harmless and out of our control.
unexpected_cfgs = "allow"

[dependencies]
# 与 adabraka-ui 内部的 git 依赖保持同一 source identifier，避免 Cargo
# 将同一 commit 的 adabraka-gpui 解析成两份 crate，导致 GPUI 类型不兼容。
gpui = { package = "adabraka-gpui", git = "https://github.com/freefcw/adabraka-gpui" }
adabraka-ui = { git = "https://github.com/freefcw/adabraka-ui", rev = "6ed3f1" }
# 使用 fork 版本，包含 character_index_for_point 崩溃修复
# (assert_eq! → guard clause，防止 macOS IME 回调时 layout 缓存过期导致 panic)

anyhow = "1.0"
async-trait = "0.1"
dirs = "5"
interprocess = "2"
fern = "0.7"
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
smol = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
base64 = "0.22.1"
ureq = "3"
portable-pty = "0.8"
which = "6"
rust-i18n = "3"
sys-locale = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
prost = "0.13"
# 静态编译 OpenSSL，避免运行时依赖 Homebrew 的 libssl 动态库。
# 分发时必须保留：用户机器上不一定有 OpenSSL，且 adhoc 签名 + hardened runtime
# 会因 Team ID 不匹配拒绝加载 Homebrew 的 dylib。
openssl-sys = { version = "0.9", features = ["vendored"] }

# -- macOS native deps --
[target.'cfg(target_os = "macos")'.dependencies]
smappservice-rs = "0.1"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSImage", "NSApplication", "NSButton", "NSView", "NSWindow", "NSControl", "NSStatusBar", "NSRunningApplication", "NSResponder"] }
objc2-user-notifications = "0.3"
block2 = "0.6"

# -- non-macOS notification deps --
# notify-rust MUST be macOS-excluded. Its transitive dependency mac-notification-sys
# contains ObjC code that calls LSCopyApplicationURLsForBundleIdentifier() and
# AppleScript "get id of application" at link time, scanning all registered app
# locations including network volumes. This triggers the macOS TCC dialog:
# "BananaTray wants to access files on a network volume".
# On macOS we use our own native implementation (UNUserNotificationCenter +
# osascript fallback), so notify-rust is unnecessary. See src/notification.rs.
[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = "4"

[dev-dependencies]
tempfile = "3"
