[package]
name = "bananatray"
version = "0.1.0"
edition = "2021"
description = "A cross-platform system tray application for monitoring AI coding assistant quotas"
license = "MIT"
homepage = "https://github.com/freefcw/BananaTray"
repository = "https://github.com/freefcw/BananaTray"

[lib]
name = "bananatray"
path = "src/lib.rs"

[[bin]]
name = "bananatray"
path = "src/main.rs"
required-features = ["app"]

[features]
# `app` gates the GPUI tray application shell and its runtime-only dependencies.
# `--no-default-features` is kept only for lib-layer local verification.
default = ["app"]
app = [
    "dep:gpui",
    "dep:adabraka-ui",
    "dep:interprocess",
    "dep:fern",
    "dep:smappservice-rs",
    "dep:objc2",
    "dep:objc2-foundation",
    "dep:objc2-app-kit",
    "dep:objc2-user-notifications",
    "dep:block2",
    "dep:notify-rust",
]

[lints.rust]
# The `objc` crate's macros check for `feature = "cargo-clippy"` which triggers
# unexpected_cfgs warnings. These are harmless and out of our control.
unexpected_cfgs = "allow"

[dependencies]
# 与 adabraka-ui 内部的 git 依赖保持同一 source identifier，避免 Cargo
# 将同一 commit 的 adabraka-gpui 解析成两份 crate，导致 GPUI 类型不兼容。
# 禁用不必要的图像格式 features 以减小体积：仅保留 SVG + PNG（app logo）
gpui = { package = "adabraka-gpui", git = "https://github.com/freefcw/adabraka-gpui", default-features = false, features = ["font-kit", "image-format-png"], optional = true }
adabraka-ui = { git = "https://github.com/freefcw/adabraka-ui", rev = "8c10cbd", default-features = false, optional = true }
# 使用 fork 版本，包含 character_index_for_point 崩溃修复
# (assert_eq! → guard clause，防止 macOS IME 回调时 layout 缓存过期导致 panic)

anyhow = "1.0"
async-trait = "0.1"
dirs = "5"
interprocess = { version = "2", default-features = false, optional = true }
fern = { version = "0.7", optional = true }
log = "0.4"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde_yml = "0.0.12"
smol = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
ureq = { version = "3", default-features = false, features = ["charset", "_tls", "rustls"] }
portable-pty = "0.9"
which = "8"
rust-i18n = "3"
sys-locale = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
prost = "0.13"

# -- macOS native deps --
[target.'cfg(target_os = "macos")'.dependencies]
smappservice-rs = { version = "0.1", optional = true }
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSArray"], optional = true }
objc2-app-kit = { version = "0.3", features = ["NSImage", "NSApplication", "NSButton", "NSView", "NSWindow", "NSControl", "NSStatusBar", "NSRunningApplication", "NSResponder"], optional = true }
objc2-user-notifications = { version = "0.3", optional = true }
block2 = { version = "0.6", optional = true }

# -- non-macOS notification deps --
# notify-rust MUST be macOS-excluded. Its transitive dependency mac-notification-sys
# contains ObjC code that calls LSCopyApplicationURLsForBundleIdentifier() and
# AppleScript "get id of application" at link time, scanning all registered app
# locations including network volumes. This triggers the macOS TCC dialog:
# "BananaTray wants to access files on a network volume".
# On macOS we use our own native implementation (UNUserNotificationCenter +
# osascript fallback), so notify-rust is unnecessary. See src/notification.rs.
[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = { version = "4", optional = true }
zbus = { version = "5", default-features = false, features = ["async-io"] }

[profile.release]
opt-level = "z"       # 优先优化体积
strip = true          # 移除符号表，减小二进制体积
lto = "fat"           # 全量 LTO，跨 crate 死代码消除
codegen-units = 1     # 单 codegen unit，配合 LTO 最大化优化
panic = "abort"       # 去掉 unwind 表，减小体积并改善优化

[dev-dependencies]
tempfile = "3"
